@@ -8,6 +8,7 @@ http://svn.edgewall.org/repos/babel/tags/0.9.1/
  * Fixed time formatting for 12 am and 12 pm.
  * Fixed output encoding of the `pybabel --list-locales` command.
  * PO files are now written in binary mode on windows (ticket #61).
+ * Fixed catalogs' charset values not being recognized.
 
 
 Version 0.9
